# fireredasr-onnx

./: .gitignore  CMakeLists.txt
cmake/: gflags.cmake  kaldi-native-fbank.cmake  onnxruntime-linux-aarch64.cmake  onnxruntime-osx-arm64.cmake  onnxruntime.cmake
examples/: CMakeLists.txt  cmvn.txt  features.cc  features.h  fire-red-asr-onnx.cc  gflags_test.cc  wav.h  whisper-cxx-api.cc
fireredasr/: Makefile  example.py  hypos.txt  model_wrapper.py  run_onnx_model.sh  test_model_wrapper.py  test_onnx_model.py  to_onnx.py  to_onnx.sh  wavlist.txt
recognizer/: CMakeLists.txt  base64-decode.cc  bbpe.cc  features.cc  features.h  offline-whisper-greedy-search-decoder.cc  offline-whisper-greedy-search-decoder.h  offline-whisper-model-config.cc  offline-whisper-model-config.h  offline-whisper-model.cc  offline-whisper-model.h  onnx-utils.cc  onnx-utils.h  symbol-table.cc  text-utils.cc  wave-reader.cc  whisper-features.cc  whisper-features.h
src/: features.cc
whisper/: export-onnx.py  test.py
